# Filozofowie_ZAAWANSOWANE

./: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  cook.cpp  cook.h  display.cpp  display.h  kitchen.cpp  kitchen.h  main.cpp  philosopher.cpp  philosopher.h  waiter.cpp  waiter.h
